<resources>
    <string name="app_name">OpenLibrary</string>

    <string name="bottom_home_item">Acceuil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_book_item">Ajouter</string>
    <string name="bottom_profil_item">Profil</string>

    <!-- page d'acceuil -->
    <string name="home_page_title">Acceuil</string>
    <string name="home_page_discover">A découvrir</string>
    <string name="home_page_new">Nouvauté</string>
    <string name="home_page_subscription">Abonnement</string>
    <string name="home_page_detective_novel">Policier</string>
    <string name="home_page_romance">Romance</string>
    <string name="home_page_biography">Biographie</string>

    <!-- ma collection -->
    <string name="collection_page_title">Ma collection</string>
    <string name="collection_page_filter">Ranger par</string>
    <string name="collection_page_latest_button">Date</string>
    <string name="collection_page_AZ_button">A-Z</string>
    <string name="collection_page_popularity_button">Popularité</string>

    <!-- page ajout d'un livre -->
    <string name="add_book_page_title">Ajout d\'une nouvelle création</string>
    <string name="add_book_page_upload_cover">Charger la couverture</string>
    <string name="add_book_page_name_input">Titre du livre</string>
    <string name="add_book_page_summary_input">Résumé du livre</string>
    <string name="add_book_page_author_input">Auteur du livre</string>
    <string name="add_book_page_type">Genre</string>
    <string-array name="add_book_page_type_spinner_input">
        <item>Romance</item>
        <item>Policier</item>
        <item>Biographie</item>
    </string-array>
    <string name="add_book_page_upload_text_button">Importer le texte</string>
    <string name="add_book_page_confirm_button">Confirmer</string>

    <!-- fenètre popup de détail du livre-->
    <string name="popup_book_name">Nom du livre</string>
    <string name="popup_book_summary_title">Résumé</string>
    <string name="popup_book_summary_subtitle">Résumé détaillé</string>
    <string name="popup_book_type_title">Genre :</string>
    <string name="popup_book_type_subtitle">Romance</string>
    <string name="popup_book_like">Ajouter au favoris</string>
    <string name="popup_book_author">Nom de l\'auteur</string>
    <string name="popup_book_download_button">Télécharger</string>
    <string name="popup_book_read_button">Lire</string>


    <!-- Plant customise -->
    <string name="item_page_book_name">Nom du livre</string>
    <string name="item_page_book_author">Nom de l\'auteur</string>

</resources>