<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/button_upload"
            style="@style/DefaultTextStyle"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:padding="5dp"
            android:text="@string/add_book_page_upload_cover"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange"
            app:cornerRadius="10dp" />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/livre1" />

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_book_page_name_input"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingLeft="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/author_input"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_book_page_author_input"
        android:paddingLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/summary_input"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_book_page_summary_input"
        android:paddingLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintTop_toBottomOf="@+id/author_input"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/add_book_page_type"
        style="@style/SmallTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book_page_type"
        app:layout_constraintStart_toStartOf="@+id/summary_input"
        app:layout_constraintTop_toBottomOf="@+id/summary_input"
        android:layout_marginTop="@dimen/item_margin"/>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_book_page_type"
        android:entries="@array/add_book_page_type_spinner_input"
        android:paddingLeft="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/add_book_page_type"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/SubtitleTextStyle"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/add_book_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>